fixed spacing

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .color-nav {
   background-color: #f7b8d4;
-  color: white;
   font-family: "Noto Sans KR", sans-serif;
+  font-size: 15px;
 }
